deploy/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sams-inventory
  namespace: '@@sams-inventory/kubernetes/namespace@@'
spec:
  replicas: '@@sams-inventory/kubernetes/replicas@@'
  selector:
    matchLabels:
      app: sams-inventory
  template:
    metadata:
      labels:
        app: sams-inventory
    spec:
      containers:
        - image: '@@sams-inventory/docker/container@@'
          name: sams-inventory
          ports:
            - containerPort: '@@sams-inventory/docker/containerPort@@'
              protocol: TCP
      restartPolicy: Always
